@@ -17,6 +17,13 @@ version 2.78
 	--strict-order active. Thanks to Hans Dedecker
 	for the patch
 
+	Fix regression in 2.77, ironically added as a security
+	improvement, which resulted in a crash when a DNS
+	query exceeded 512 bytes (or the EDNS0 packet size,
+	if different.) Thanks to Christian Kujau, Arne Woerner
+	Juan Manuel Fernandez and Kevin Darbyshire-Bryant for
+	chasing this one down.  CVE-2017-13704 applies.
+
 	
 version 2.77
 	Generate an error when configured with a CNAME loop,
